converting to IU double linked list